# lutgen-rs

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  publish.yml  release.yml  rust.yml  website.yml  wiki.yml  windows.yml
benches/: generate.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: color.rs  main.rs  palette.rs
crates/lib/: Cargo.toml
crates/lib/benches/: main.rs
crates/lib/src/: identity.rs  lib.rs
crates/lib/src/interpolation/: gaussian_blur.rs  gaussian_sample.rs  mod.rs  nearest_neighbor.rs  rbf.rs
crates/palettes/: Cargo.toml  README.md  build.rs  lib.rs  palettes.toml
crates/studio/: Cargo.toml  Trunk.toml  index.html
crates/studio/assets/: manifest.json  sw.js
crates/studio/src/: color.rs  file_picker.rs  lib.rs  main.rs  palette.rs  state.rs  updates.rs  utils.rs  worker.rs
crates/studio/src/ui/: about.rs  central.rs  left.rs  mod.rs  scene.rs  status.rs  top.rs
docs/: Gemfile  README.md  _config.yml  lutgen.1
docs/_sass/color_schemes/: carburetor.scss
docs/man/: lutgen.1
docs/pages/: cli.md  examples.md  home.md  lore.md  studio.md  tips.md
palettes/: Cargo.toml  README.md  build.rs  palettes.json  palettes.toml
palettes/src/: lib.rs  lib.template  lib.tera  palettes.tera
scripts/: build.sh  oneline.sh
src/: bin.rs  identity.rs  lib.rs
src/interpolated_remap/: gaussian_v0.rs  gaussian_v1.rs  mod.rs  nearest_neighbor.rs  shepard.rs  v0.rs  v1.rs
src/interpolation/: gaussian_sample.rs  mod.rs  nearest_neighbor.rs  rbf.rs
src/interpolation/rbf/: gaussian.rs  linear.rs  mod.rs  shepard.rs
src/palette/: mod.rs
studio/: Cargo.toml
studio/src/: bin.rs  palette.rs  state.rs  worker.rs
