[package]
name = "lutgen"
version = "0.11.0"
documentation = "https://docs.rs/lutgen"
keywords = ["image-processing", "color", "hald-clut", "lookup-tables", "gaussian"]
description = "A blazingly fast interpolated LUT generator and applicator for arbitrary and popular color palettes."
edition = "2021"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
repository = "https://github.com/ozwaldorf/lutgen-rs"
homepage = "https://github.com/ozwaldorf/lutgen-rs"
categories = ["multimedia::images"]

[workspace]
members = ["palettes"]

[workspace.dependencies]
clap = { version = "4.2", features = ["derive"] }
regex = "1.10"

[dependencies]
image = { version = "0.25", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
kiddo = "4.2"
oklab = "1.0"

# General bin deps
lutgen-palettes = { version = "0.4", path = "palettes", optional = true }
clap = { workspace = true, optional = true }
clap_complete = { version = "4.5.6", optional = true }
spinners = { version = "4.1.1", optional = true }
dirs = { version = "5.0", optional = true }

# Patch bin deps
regex = { workspace = true, optional = true }
imara-diff = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["bin"]
bin = [
  "lutgen-palettes",
  "clap",
  "clap_complete",
  "spinners",
  "dirs",
  "regex",
  "imara-diff"
]

[[bin]]
name = "lutgen"
path = "src/bin.rs"
required-features=["bin"]

[[bench]]
name = "main"
harness = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.test]
inherits = "release"

[package.metadata.aur]
custom = [
  "# Generate and install shell completions",
  "mkdir completions",
  "./lutgen completions bash > completions/$_pkgname",
  "./lutgen completions zsh > completions/_$_pkgname",
  "./lutgen completions fish > completions/$_pkgname.fish",
  "install -Dm644 completions/$_pkgname -t \"$pkgdir/usr/share/bash-completion/completions\"",
  "install -Dm644 completions/_$_pkgname -t \"$pkgdir/usr/share/zsh/site-functions\"",
  "install -Dm644 completions/$_pkgname.fish -t \"$pkgdir/usr/share/fish/vendor_completions.d\""
]
