[package]
name = "lutgen"
version = "0.11.2"
documentation = "https://docs.rs/lutgen"
keywords = [
  "image-processing",
  "color",
  "hald-clut",
  "lookup-tables",
  "gaussian",
]
description = "A blazingly fast interpolated LUT utility for arbitrary and popular color palettes."
edition = "2021"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
repository = "https://github.com/ozwaldorf/lutgen-rs"
homepage = "https://github.com/ozwaldorf/lutgen-rs"
categories = ["multimedia::images"]

[workspace]
members = ["palettes"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
image = "0.25"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
kiddo = "4.2"
oklab = "1.1"

# Bin dependencies
lutgen-palettes = { version = "0.4", path = "palettes", optional = true }
strsim = { version = "0.11", optional = true }
dirs = { version = "5.0", optional = true }
regex = { workspace = true, optional = true }
imara-diff = { version = "0.1", optional = true }

[dependencies.bpaf]
version = "0.9.14"
features = ["derive", "dull-color", "autocomplete", "docgen"]
optional = true

[features]
default = ["bin"]
bin = ["lutgen-palettes", "bpaf", "strsim", "dirs", "regex", "imara-diff"]

[[bin]]
name = "lutgen"
path = "src/bin.rs"
required-features = ["bin"]

[[bench]]
name = "main"
harness = false

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.test]
inherits = "release"

[package.metadata.aur]
custom = [
  "# Generate and install shell completions",
  "mkdir completions",
  "./lutgen --bpaf-complete-style-bash > completions/$_pkgname",
  "./lutgen --bpaf-complete-style-zsh > completions/_$_pkgname",
  "./lutgen --bpaf-complete-style-fish > completions/$_pkgname.fish",
  "install -Dm644 completions/$_pkgname -t \"$pkgdir/usr/share/bash-completion/completions\"",
  "install -Dm644 completions/_$_pkgname -t \"$pkgdir/usr/share/zsh/site-functions\"",
  "install -Dm644 completions/$_pkgname.fish -t \"$pkgdir/usr/share/fish/vendor_completions.d\"",
]
