[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
regex = "1.11"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
oklab = "1.1"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
opt-level = 1
lto = false
panic = "abort"

[profile.test]
inherits = "release"
