[package]
name = "lutgen-palettes"
version = "0.2.2"
documentation = "https://docs.rs/lutgen-palettes"
keywords = ["colorschemes", "color", "palettes", "linux", "rice"]
description = "Popular linux colorscheme palettes"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
exoquant.workspace = true
clap.workspace = true

[build-dependencies]
regex = "1"
serde_json = "1"
tera = { version = "1", default-features = false }

[features]
default = []
