[package]
name = "lutgen-palettes"
version = "0.2.5"
documentation = "https://docs.rs/lutgen-palettes"
keywords = ["colorschemes", "color", "palettes", "linux", "rice"]
description = "Popular linux colorscheme palettes"
edition = "2021"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
repository = "https://github.com/ozwaldorf/lutgen-rs"
categories = ["multimedia::images"]

[dependencies]
clap.workspace = true

[build-dependencies]
regex = "1"
serde_json = "1"
tera = { version = "1", default-features = false }

[features]
default = []
