[package]
name = "lutgen-cli"
version = "1.1.0"
keywords = [
  "image-processing",
  "color",
  "hald-clut",
  "lookup-tables",
  "gaussian",
]
description = "A blazingly fast interpolated LUT utility for arbitrary and popular color palettes."
edition = "2021"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
readme = "../../README.md"
repository = "https://github.com/ozwaldorf/lutgen-rs"
homepage = "https://github.com/ozwaldorf/lutgen-rs"
categories = ["multimedia::images"]
default-run = "lutgen"

[dependencies]
lutgen = { version = "0.15", path = "../lib" }

bpaf.workspace = true
dirs.workspace = true
image.workspace = true
regex.workspace = true
oklab.workspace = true
rayon.workspace = true

imara-diff = "0.2"
lutgen-palettes = { version = "0.4", path = "../palettes" }
strsim = "0.11"
quantette = { version = "0.3", features = ["colorspaces", "kmeans"] }

[[bin]]
name = "lutgen"
path = "src/main.rs"
bench = false

[package.metadata.aur]
custom = [
  "# Generate and install shell completions",
  "mkdir completions",
  "./lutgen --bpaf-complete-style-bash > completions/$_pkgname",
  "./lutgen --bpaf-complete-style-zsh > completions/_$_pkgname",
  "./lutgen --bpaf-complete-style-fish > completions/$_pkgname.fish",
  "install -Dm644 completions/$_pkgname -t \"$pkgdir/usr/share/bash-completion/completions\"",
  "install -Dm644 completions/_$_pkgname -t \"$pkgdir/usr/share/zsh/site-functions\"",
  "install -Dm644 completions/$_pkgname.fish -t \"$pkgdir/usr/share/fish/vendor_completions.d\"",
]
