[package]
name = "lutgen"
version = "0.15.0"
documentation = "https://docs.rs/lutgen"
keywords = [
  "image-processing",
  "color",
  "hald-clut",
  "lookup-tables",
  "gaussian",
]
description = "A blazingly fast interpolated LUT utility for arbitrary and popular color palettes."
edition = "2021"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
readme = "../../README.md"
repository = "https://github.com/ozwaldorf/lutgen-rs"
homepage = "https://github.com/ozwaldorf/lutgen-rs"
categories = ["multimedia::images"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
lutgen-palettes = { path = "../palettes" }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dependencies]
image = { version = "0.25", default-features = false, features = [] }
oklab.workspace = true
rayon = { workspace = true, optional = true }

rand = "0.9"
rand_distr = "0.5"
kiddo = "5.2"
arrayref = "0.3"

[features]
rayon = ["dep:rayon", "image/rayon"]
default = ["rayon"]

[lib]
bench = false

[[bench]]
name = "main"
harness = false
