[package]
name = "lutgen-palettes"
version = "0.4.2"
documentation = "https://docs.rs/lutgen-palettes"
keywords = ["colorschemes", "color", "palettes", "linux", "rice"]
description = "Popular linux colorscheme palettes"
edition = "2021"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
repository = "https://github.com/ozwaldorf/lutgen-rs"
categories = ["multimedia::images"]

[lib]
path = "./lib.rs"

[dependencies]
strum.workspace = true

[build-dependencies]
regex.workspace = true
serde.workspace = true
toml = "1.0"
tinytemplate = "1.2"

