[package]
name = "lutgen-studio"
version = "0.1.0"
description = "Offical GUI for Lutgen, the best way to apply popular colorschemes to any image or wallpaper!"
edition = "2021"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
repository = "https://github.com/ozwaldorf/lutgen-rs"
homepage = "https://github.com/ozwaldorf/lutgen-rs"
keywords = [
  "image-processing",
  "color",
  "hald-clut",
  "lookup-tables",
  "gaussian",
]
categories = ["multimedia::images"]
include = ["Cargo.toml", "**/*.rs", "assets"]

[dependencies]
lutgen = { path = "../lib", version = "0.13" }
lutgen-palettes = { path = "../palettes", version = "0.4" }

image.workspace = true
strum.workspace = true
serde.workspace = true

env_logger = "0.11"
log = "0.4"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
rfd = "0.15"
uuid = { version = "1.17", features = ["v4"] }

