[package]
name = "lutgen-studio"
version = "0.2.2"
description = "Offical GUI for Lutgen, the best way to apply popular colorschemes to any image or wallpaper!"
edition = "2024"
license = "MIT"
authors = ["Ossian Mapes <self@ossian.dev>"]
readme = "../../README.md"
repository = "https://github.com/ozwaldorf/lutgen-rs"
homepage = "https://github.com/ozwaldorf/lutgen-rs"
keywords = [
  "image-processing",
  "color",
  "hald-clut",
  "lookup-tables",
  "gaussian",
]
categories = ["multimedia::images"]
include = ["Cargo.toml", "**/*.rs", "assets"]

[dependencies]
lutgen = { path = "../lib", version = "0.13" }
lutgen-palettes = { path = "../palettes", version = "0.4" }

bpaf.workspace = true
image.workspace = true
strum.workspace = true
serde.workspace = true
dirs.workspace = true

env_logger = "0.11"
log = "0.4"
egui = "0.32"
egui-file-dialog = "0.11.0"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

